--- a/winstack-winapp/src/main/resources/views/login.html
+++ b/winstack-winapp/src/main/resources/views/login.html
@@ -24,7 +24,7 @@
 <body class="hold-transition login-page">
 <div class="login-box" id="rrapp" v-cloak>
   <div class="login-logo">
-    <b>人人快速开发平台</b>
+    <b>WinApp</b>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
